<resources>
    <string name="app_name">Quiz App</string>
    <string name="title">How much do you know about animals?</string>
    <string name="subTitle">Start the quiz!</string>
    <string name="first_question">1. Can a black bear run faster than a horse?</string>
    <string name="second_question">2. The dolphin is&#8230;</string>
    <string name="third_question">3. Cheetah, black marlin or peregrine falcon: which is the fastest animal?</string>
    <string name="fourth_question">4. What is this beautiful little boy here?</string>
    <string name="fifth_question">5. How many lifes do cats have?</string>
    <string name="sixth_question">6. This is the glorious mantis shrimp: what is it capable of?</string>
    <string name="seventh_question">7. Can elephants jump?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="mammal">an aquatic mammal</string>
    <string name="fish">a fish</string>
    <string name="shellfish">a shellfish</string>
    <string name="pokemon">a Pokemon</string>
    <string name="slug">a sea slug</string>
    <string name="bird">a bird</string>
    <string name="shrimp1">It can break a glass tank with its clubs</string>
    <string name="shrimp2">It has got one of the most elaborate visual systems ever discovered</string>
    <string name="shrimp3">It can fly</string>
    <string name="write_answer">Write your answer here</string>
    <string name="result">Submit answers</string>
</resources>
